# CPPink

./: .clang-format  .gitignore  Adding_initial_library_files,_and_a_first_pass_conversion_.patch  CMakeLists.txt  README.md  main.cpp  myTest.cpp  myTest.h
guis/: CMakeLists.txt  WeatherGUI.cpp  WeatherGUI.h
lib/Config/: CMakeLists.txt
lib/GUI/: GUI_BMPfile.c  GUI_BMPfile.h
lib/config/: CMakeLists.txt  DEV_Config.h  dev_hardware_SPI.h  sysfs_gpio.h  sysfs_software_spi.h
lib/ePaper/: CMakeLists.txt  EPD_7in5_V2.c  EPD_7in5_V2_old.c  EPD_7in5b_V2.c  EPD_7in5b_V2_old.c
lib/examples/: CMakeLists.txt  EPD_Test.h
libraries/: BaseScreenController.h  CMakeLists.txt  TrainGUI.cpp  TrainGUI.h  baseGUI.h  bmpManager.cpp  bmpManager.h  myBmpManager.cpp  myBmpManager.h  myGUI.cpp  myGUI.h  screenController.cpp  screenController.h  testGUI.cpp  testGUI.h  testScreenController.cpp  testScreenController.h
myLibs/: CMakeLists.txt  myBmpManager.cpp  myBmpManager.h  myGUI.h  myGui.cpp
utils/: BaseGUI.h  BaseScreenController.h  BitVector.h  BoundaryBox.h  CMakeLists.txt  Point.h  bmpManager.cpp  bmpManager.h  bounding_box.h  helper_funcs.h  point.h
waveshare_libraries/GUI/: CMakeLists.txt  GUI_BMPfile.h  GUI_Paint.c  GUI_Paint.h
waveshare_libraries/config/: CMakeLists.txt  DEV_Config.c  RPI_gpiod.h
waveshare_libraries/ePaper/: EPD_7in5_V2.h
waveshare_libraries/examples/: EPD_7in5_V2_test.c  ImageData.h
waveshare_libraries/fonts/: CMakeLists.txt
